--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,540 @@
 *, *::before, *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+
+@font-face {
+  font-family: Norse-Bold;
+  src: url(/fonts/Norse-Bold.otf);
+}
+
+:root {
+  font-size: 10px;
+  --clr-text-primary: black;
+  --clr-text-logo: white;
+
+  --clr-border-neutral: #E5E7EB;
+  --clr-accent: #596D48;
+  --clr-focus: rgb(22, 53, 190);
+  --clr-invalid: rgb(211, 39, 39);
+
+  --block-padding: 4rem;
+  --radius: 0.45em;
+}
+
+body {
+  display: flex;
+}
+
+.background-wrapper {
+  background-image: url(/images/background-img.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 95vw;
+}
+
+
+.main-content {
+  padding: 5rem 0;
+  background-color: rgb(250, 250, 250);
+  height: 100vh;
+  overflow: hidden;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.main-content > h3 {
+  font-size: 2.2rem;
+  line-height: 1.15;
+  padding: var(--block-padding);
+  padding-right: calc(var(--block-padding) + 20rem);
+  max-width: 80ch;
+}
+
+.form-content {
+  background-color: white;
+  padding-left: var(--block-padding);
+  padding-right: calc(var(--block-padding) + 8rem);
+  padding-top: calc(var(--block-padding) - 2rem);
+  padding-bottom: calc(var(--block-padding) - 0.5rem);
+  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 2.5em 7em;
+
+  box-shadow: 0 4px 8px 1px rgb(214, 214, 214);
+}
+
+form label {
+  display: block;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  font-weight: 500;
+}
+
+form h2 {
+  display: block;
+  width: 100%;
+  font-size: 2.4rem;
+  margin: 0;
+  padding-bottom: calc(var(--block-padding) - 3rem);
+}
+
+.form-row > input {
+  width: 300px;
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid var(--clr-border-neutral);
+  padding: 15px 10px;
+
+  font-size: 1.6rem;
+}
+
+.form-row > input:hover {
+  background-color: #f1f0f0;
+}
+
+.form-row input:focus {
+  box-shadow: 0 2px 4px 1px rgb(233, 233, 232);
+  outline: 1px solid var(--clr-focus);
+}
+
+.error:invalid {
+  outline: 1px solid var(--clr-invalid);
+}
+
+.error + .error-msg::after {
+  display: block;
+  color: var(--clr-invalid);
+  content: '*Passwords do not match';
+
+  font-size: 1.1rem;
+  margin-top: 2px;
+}
+
+.error.error-cleared + .error-msg::after {
+  opacity: 0;
+}
+
+form button {
+  margin: var(--block-padding);
+  margin-bottom: calc(var(--block-padding) - 2rem);
+  padding: 1em 2.8em;
+  font-size: 1.6rem;
+  font-weight: bold;
+
+  color: white;
+  background-color: var(--clr-accent);
+  border-radius: var(--radius);
+  border: none;
+  box-shadow: 0 4px 8px 1px rgb(214, 214, 214);
+}
+
+form button:hover {
+  background-color: #657a52;
+  cursor: pointer;
+}
+
+form button:active {
+  background-color: #4e5f3f;
+}
+
+form  p {
+  font-size: 1.6rem;
+  margin-left: var(--block-padding);
+}
+
+form p > a {
+  text-decoration: none;
+  color: var(--clr-accent);
+  font-weight: bold;
+}
+
+form p > a:hover {
+  text-decoration: underline;
+} 
+
+.extra-line-space {
+  display: block;
+  padding-top: calc(var(--block-padding) - 1rem);
+}
+
+
+
+.hero-wrapper {
+  font-family: Norse-Bold, Arial, Helvetica, sans-serif;
+  background-color: black;
+  opacity: 0.5;
+}
+
+.hero-wrapper > h1 {
+  font-size: 4.8rem;
+  color: white;
+  opacity: 1;
+}
+
+
+
+
+
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+
+/* Document
+   ========================================================================== */
+
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+
+ html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+
+/**
+ * Remove the margin in all browsers.
+ */
+
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+
+button,
+input { /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+
+button,
+select { /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+
+[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+
+/**
+ * Add the correct display in IE 10+.
+ */
+
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+
+[hidden] {
+  display: none;
+}
+
+/* 
+===========================================================
+END NORMALIZE.CSS 
+===========================================================
+*/
