--- a/styles.css
+++ b/styles.css
@@ -29,23 +29,41 @@ body {
 
 .background-wrapper {
   background-image: url(/images/background-img.jpg);
+  background-attachment:local;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
   width: 95vw;
+
+  display: flex;
+  flex-direction: column;
 }
 
+.background-wrapper footer {
+  position: fixed;
+  bottom: 0;
+  padding: calc(var(--block-padding) - 3rem);
+  align-self: center;
+}
+
+.background-wrapper footer,
+.background-wrapper a {
+  color: white;
+  text-align: center;
+  font-size: 1.2rem;
+}
 
 .main-content {
   padding: 5rem 0;
   background-color: rgb(250, 250, 250);
   height: 100vh;
-  overflow: hidden;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  overflow: hidden;
 }
 
 .main-content > h3 {
@@ -53,13 +71,16 @@ body {
   line-height: 1.15;
   padding: var(--block-padding);
   padding-right: calc(var(--block-padding) + 20rem);
+  padding-top: 5em;
   max-width: 80ch;
+
+  word-spacing: -5px;
 }
 
 .form-content {
   background-color: white;
   padding-left: var(--block-padding);
-  padding-right: calc(var(--block-padding) + 8rem);
+  padding-right: 2em;
   padding-top: calc(var(--block-padding) - 2rem);
   padding-bottom: calc(var(--block-padding) - 0.5rem);
   
@@ -96,6 +117,37 @@ form h2 {
   font-size: 1.6rem;
 }
 
+.form-row > input:focus::placeholder {
+  opacity: 0;
+}
+
+.form-row > input:invalid:not(:focus):not(:placeholder-shown) {
+  outline: 1px solid var(--clr-invalid);
+  background-color: rgba(253, 217, 222, 0.596);
+}
+
+.form-row > input:valid:not(:focus):not(.error) {
+  outline: 1px solid green;
+}
+
+.form-row > input:valid:not(:focus) + .fa-solid.fa-check {
+  opacity: 1;  
+}
+
+.form-row {
+  position: relative;
+}
+
+i {
+  color: green;
+  font-size: 1.8rem;
+  opacity: 0;
+
+  position: absolute;
+  top: 20px;
+  right: 10px;
+}
+
 .form-row > input:hover {
   background-color: #f1f0f0;
 }
@@ -105,8 +157,9 @@ form h2 {
   outline: 1px solid var(--clr-focus);
 }
 
-.error:invalid {
+.error {
   outline: 1px solid var(--clr-invalid);
+  background-color: rgba(253, 217, 222, 0.596);
 }
 
 .error + .error-msg::after {
@@ -118,14 +171,10 @@ form h2 {
   margin-top: 2px;
 }
 
-.error.error-cleared + .error-msg::after {
-  opacity: 0;
-}
-
 form button {
   margin: var(--block-padding);
   margin-bottom: calc(var(--block-padding) - 2rem);
-  padding: 1em 2.8em;
+  padding: 1em 3.5em;
   font-size: 1.6rem;
   font-weight: bold;
 
@@ -148,6 +197,8 @@ form button:active {
 form  p {
   font-size: 1.6rem;
   margin-left: var(--block-padding);
+
+  padding-bottom: 6em;
 }
 
 form p > a {
@@ -165,21 +216,51 @@ form p > a:hover {
   padding-top: calc(var(--block-padding) - 1rem);
 }
 
-
-
 .hero-wrapper {
   font-family: Norse-Bold, Arial, Helvetica, sans-serif;
-  background-color: black;
-  opacity: 0.5;
+  background-color: rgba(0, 0, 0, 0.507);
+
+  margin-top: 90px;
 }
 
-.hero-wrapper > h1 {
-  font-size: 4.8rem;
+.logo-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-wrapper img {
+  display: inline-block;
+  width: 100px;
+  box-sizing: content-box;
+  padding: 2em 1em;
+}
+
+.hero-wrapper h1 {
+  display: inline-block;
+  font-size: 12rem;
+  margin: 0;
+
   color: white;
   opacity: 1;
 }
 
+/* MEDIA QUERIES */
+@media only screen and (max-width: 1080px) {
+  .main-content {
+    overflow-y: scroll;
+  }
 
+  .main-content > h3 {
+    padding-top: 15em;
+    padding-right: 2em;
+  }
+
+  .logo-wrapper {
+    padding-left: 2em;
+    padding-right: 2em;
+  }
+}
 
 
 
