--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: Norse-Bold;
-  src: url(/fonts/Norse-Bold.otf);
+  src: url(fonts/Norse-Bold.otf);
 }
 
 :root {
@@ -28,7 +28,7 @@ body {
 }
 
 .background-wrapper {
-  background-image: url(/images/background-img.jpg);
+  background-image: url(images/background-img.jpg);
   background-attachment:local;
   background-position: center;
   background-size: cover;
